itsf-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: itsf-svc
spec:
  type: NodePort
  selector:
    app: itsf
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
