risf-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: risf-svc
spec:
  type: NodePort
  selector:
    app: risf
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
